--- a/myApp/src/app/register/register.page.html
+++ b/myApp/src/app/register/register.page.html
@@ -59,13 +59,13 @@
       </ion-list-header>
 
       <ion-item>
-        <ion-label>owner</ion-label>
-        <ion-radio slot="start" value="owner"></ion-radio>
+        <ion-label>ลูกค้า</ion-label>
+        <ion-radio slot="start" value="1"></ion-radio>
       </ion-item>
 
       <ion-item>
-        <ion-label>user</ion-label>
-        <ion-radio slot="start" value="user"></ion-radio>
+        <ion-label>เจ้าของสนาม</ion-label>
+        <ion-radio slot="start" value="2"></ion-radio>
       </ion-item>
 
     </ion-radio-group>
