--- a/myApp/src/app/login/login.page.html
+++ b/myApp/src/app/login/login.page.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
@@ -19,12 +20,13 @@
   <br>
 
 
+
   <ion-segment [(ngModel)]="valuedegree" (ionChange)="segmentChanged(valuedegree)">
-    <ion-segment-button value="owner">
-      <ion-label>เจ้าของสนาม</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="customer">
+    <ion-segment-button value="1">
       <ion-label>ลูกค้า</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="2">
+      <ion-label>เจ้าของสนาม</ion-label>
     </ion-segment-button>
   </ion-segment>
   <br>
