--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -1,41 +1,100 @@
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <ion-item *ngFor="let datastore of datapass.datastore">
-        <img style="width:100%" src="data:image/png;base64,{{datastore.picture_store}}">
-      </ion-item>
+      <p-dataView #dv [value]="datastore">
+        <ng-template let-datastore>
+          ร้าน {{datastore.name_store}}
+        </ng-template>
+      </p-dataView>
 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let datafield of datapass.datafield" (click)="clickfield(datafield.id_field)">
-      <table>
-        <img style="width: 50x; height: 50px;" src="data:image/png;base64,{{datafield.picture_picturefield}}">
-      </table>
-      <tr>
-        <th>
-          ชื่อสนาม :
-        </th>
-        <br>
-        <th>
-          เบอร์โทร :
-        </th>
+<!--  <ion-list>-->
+<!--    <ion-item *ngFor="let datafield of datapass.datafield" (click)="clickfield(datafield.id_field)">-->
+<!--      <table>-->
+<!--        <img style="width: 50x; height: 50px;" src="data:image/png;base64,{{datafield.picture_picturefield}}">-->
+<!--      </table>-->
+<!--      <tr>-->
+<!--        <th>-->
+<!--          ชื่อสนาม :-->
+<!--        </th>-->
+<!--        <br>-->
+<!--        <th>-->
+<!--          เบอร์โทร :-->
+<!--        </th>-->
 
-      </tr>
-      <tr>
-        <th>
-          {{datafield.name_field}}
-        </th>
-        <br>
-        <th>
-          {{datafield.status_field}}
-        </th>
+<!--      </tr>-->
+<!--      <tr>-->
+<!--        <th>-->
+<!--          {{datafield.name_field}}-->
+<!--        </th>-->
+<!--        <br>-->
+<!--        <th>-->
+<!--          {{datafield.status_field}}-->
+<!--        </th>-->
 
-      </tr>
-    </ion-item>
-  </ion-list>
+<!--      </tr>-->
+<!--    </ion-item>-->
+<!--  </ion-list>-->
+
+<!--  <div class="card">-->
+<!--    <p-dataView #dv [value]="datafield" [paginator]="true" [rows]="2" filterBy="name">-->
+<!--      <ng-template pTemplate="header">-->
+<!--        <div>-->
+<!--        </div>-->
+<!--      </ng-template>-->
+<!--      <ng-template let-datafield pTemplate="listItem">-->
+<!--        <div class="p-row-2" (click)="clickfield(datafield.id_field)">-->
+<!--          <div class="product-list-item">-->
+<!--            <img src="data:image/png;base64,{{datafield.picture_picturefield}}" [alt]="datafield.name_field"/>-->
+<!--            <div class="product-list-detail">-->
+<!--              <div class="product-name">{{datafield.name_field}}</div>-->
+<!--              <div class="product-description">{{datafield.description}}</div>-->
+<!--            </div>-->
+<!--            <div class="product-list-action">-->
+<!--              <p-button icon="pi pi-shopping-cart" label="ดูรายละเอียด" (onClick)="clickfield(datafield.id_field)" [disabled]="datafield.inventoryStatus === 'OUTOFSTOCK'"></p-button>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </ng-template>-->
+<!--    </p-dataView>-->
+<!--  </div>-->
+
+  <div class="container">
+    <div class="row"  *ngFor="let data of datafield" (click)="clickfield(data.id_field)">
+      <div class="col-12">
+        <table class="table table-image">
+          <thead>
+          <tr>
+<!--            <th scope="col">Day</th>-->
+            <th scope="col">รูปภาพ</th>
+            <th scope="col">ชื่อสนาม</th>
+
+            <th scope="col">ราคา/ชม.</th>
+          </tr>
+          </thead>
+
+          <tbody>
+          <tr>
+<!--            <th scope="row">1</th>-->
+            <td class="w-500">
+              <img src="data:image/png;base64,{{data.picture_picturefield}}" [alt]="data.name_field">
+            </td>
+            <td>{{data.name_field}}</td>
+            <td>2.846</td>
+          </tr>
+          </tbody>
+
+        </table>
+      </div>
+    </div>
+  </div>
 
 </ion-content>
