--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -1,3 +1,7 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <ion-header>
   <ion-toolbar>
     <ion-title>account</ion-title>
@@ -5,17 +9,63 @@
 </ion-header>
 
 <ion-content>
-  <div>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="assets/img/default-avatar.png">
-      </ion-avatar>
-      <ion-label>ping stiiponn</ion-label>
-    </ion-item>
+
+
+  <div class="container" *ngFor="let data of dataAccount">
+    <div class="row profile">
+      <div class="col-md-3">
+        <div class="profile-sidebar">
+          <!-- SIDEBAR USERPIC -->
+          <div class="profile-userpic">
+            <img src="assets/img/default-avatar.png">
+          </div>
+          <div class="profile-usertitle">
+            <div class="profile-usertitle-name">
+              ชื่อ :{{data.firstname_member}} {{data.lasname_member}}
+            </div>
+            <div class="profile-usertitle-job">
+              ที่อยู่ :{{data.address_member}}
+            </div>
+          </div>
+
+          <div class="profile-usermenu">
+            <ul class="nav">
+              <li class="active">
+                <a href="#">
+                  <i class="glyphicon glyphicon-home"></i>
+                  Overview </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="glyphicon glyphicon-user"></i>
+                  Account Settings </a>
+              </li>
+              <li>
+                <a href="#" target="_blank">
+                  <i class="glyphicon glyphicon-ok"></i>
+                  Tasks </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="glyphicon glyphicon-flag"></i>
+                  Help </a>
+              </li>
+            </ul>
+          </div>
+          <div class="profile-userbuttons">
+            <button [routerLink]="'/login'" type="button" class="btn btn-danger btn-sm">Logout</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div class="profile-content">
+          Some user related content goes here...
+        </div>
+      </div>
+    </div>
   </div>
- <div>
-   <ion-button style="width: 250px; margin-left: 65px; margin-top: 150px" color="danger"> Logout</ion-button>
- </div>
+  <br>
+  <br>
 
 </ion-content>
 
