commit 2/30/63 success day

--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -5,68 +5,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <p-dataView #dv [value]="datastore">
-        <ng-template let-datastore>
-          ร้าน {{datastore.name_store}}
-        </ng-template>
-      </p-dataView>
-
+        <ion-toolbar style="margin-right: 290px">
+            <ion-buttons slot="start">
+                <ion-back-button >back</ion-back-button>
+            </ion-buttons>
+        </ion-toolbar>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<!--  <ion-list>-->
-<!--    <ion-item *ngFor="let datafield of datapass.datafield" (click)="clickfield(datafield.id_field)">-->
-<!--      <table>-->
-<!--        <img style="width: 50x; height: 50px;" src="data:image/png;base64,{{datafield.picture_picturefield}}">-->
-<!--      </table>-->
-<!--      <tr>-->
-<!--        <th>-->
-<!--          ชื่อสนาม :-->
-<!--        </th>-->
-<!--        <br>-->
-<!--        <th>-->
-<!--          เบอร์โทร :-->
-<!--        </th>-->
-
-<!--      </tr>-->
-<!--      <tr>-->
-<!--        <th>-->
-<!--          {{datafield.name_field}}-->
-<!--        </th>-->
-<!--        <br>-->
-<!--        <th>-->
-<!--          {{datafield.status_field}}-->
-<!--        </th>-->
-
-<!--      </tr>-->
-<!--    </ion-item>-->
-<!--  </ion-list>-->
-
-<!--  <div class="card">-->
-<!--    <p-dataView #dv [value]="datafield" [paginator]="true" [rows]="2" filterBy="name">-->
-<!--      <ng-template pTemplate="header">-->
-<!--        <div>-->
-<!--        </div>-->
-<!--      </ng-template>-->
-<!--      <ng-template let-datafield pTemplate="listItem">-->
-<!--        <div class="p-row-2" (click)="clickfield(datafield.id_field)">-->
-<!--          <div class="product-list-item">-->
-<!--            <img src="data:image/png;base64,{{datafield.picture_picturefield}}" [alt]="datafield.name_field"/>-->
-<!--            <div class="product-list-detail">-->
-<!--              <div class="product-name">{{datafield.name_field}}</div>-->
-<!--              <div class="product-description">{{datafield.description}}</div>-->
-<!--            </div>-->
-<!--            <div class="product-list-action">-->
-<!--              <p-button icon="pi pi-shopping-cart" label="ดูรายละเอียด" (onClick)="clickfield(datafield.id_field)" [disabled]="datafield.inventoryStatus === 'OUTOFSTOCK'"></p-button>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </ng-template>-->
-<!--    </p-dataView>-->
-<!--  </div>-->
-
   <div class="container">
     <div class="row"  *ngFor="let data of datafield" (click)="clickfield(data.id_field)">
       <div class="col-12">
@@ -96,5 +44,4 @@
       </div>
     </div>
   </div>
-
 </ion-content>
