--- a/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
+++ b/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
@@ -5,7 +5,11 @@
     </div>
 
     <div>
-      <ion-back-button style="margin-right: 290px"  defaultHref="/search"></ion-back-button >
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-back-button style="margin-right: 290px">back</ion-back-button>
+        </ion-buttons>
+      </ion-toolbar>
     </div>
 
   </ion-toolbar>
