commit 3/30/63 success day

--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -1,12 +1,9 @@
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 <ion-header>
   <ion-toolbar>
     <ion-title>
-        <ion-toolbar style="margin-right: 290px">
-            <ion-buttons slot="start">
+        <ion-toolbar>
+            <ion-buttons slot="start" style="margin-right: 290px">
                 <ion-back-button >back</ion-back-button>
             </ion-buttons>
         </ion-toolbar>
@@ -38,8 +35,8 @@
             <td>{{data.name_field}}</td>
             <td>2.846</td>
           </tr>
-          </tbody>
 
+          </tbody>
         </table>
       </div>
     </div>
