--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -33,7 +33,7 @@
               <img src="data:image/png;base64,{{data.picture_picturefield}}" [alt]="data.name_field">
             </td>
             <td>{{data.name_field}}</td>
-            <td>2.846</td>
+            <td>{{data.price_field}}</td>
           </tr>
 
           </tbody>
