--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -51,7 +51,8 @@
           </div>
           <br>
           <div>
-            <button (click)="presentAlertConfirm()" type="button" class="btn btn-danger btn-sm">Logout</button>
+            <ion-button  (click)="presentAlertConfirm()" color="danger"  style="height: 40px">Logout</ion-button>
+
           </div>
 
         </div>
