--- a/myApp/src/app/login/login.page.html
+++ b/myApp/src/app/login/login.page.html
@@ -1,38 +1,45 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-img style="width: 60px; height: 60px;" src="assets/img/jongsanam-logo.png"></ion-img>
-    </ion-toolbar>
-  </ion-header>
+<ion-header>
+  <ion-nav>
+    <ion-title>
+      Login
+    </ion-title>
+  </ion-nav>
+</ion-header>
+
 <ion-content>
-  <ion-item>
-    <ion-label position="floating">username</ion-label>
-    <ion-input [(ngModel)] ="username" ></ion-input>
-  </ion-item>
-  <br>
-  <ion-item>
-    <ion-label position="floating">password</ion-label>
-    <ion-input [(ngModel)] ="password" type="password" ></ion-input>
-  </ion-item>
-  <br>
-  <br>
+
+<ion-list >
+    <ion-item style="text-align: center">
+      <img src="assets/img/jongsanam-logo.png">
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">username</ion-label>
+      <ion-input [(ngModel)] ="username" ></ion-input>
+    </ion-item>
+    <br>
+    <ion-item>
+      <ion-label position="floating">password</ion-label>
+      <ion-input [(ngModel)] ="password" type="password" ></ion-input>
+    </ion-item>
+    <br>
+    <br>
+</ion-list>
 
 
-
-  <ion-segment [(ngModel)]="valuedegree" (ionChange)="segmentChanged(valuedegree)">
-    <ion-segment-button value="1">
-      <ion-label>ลูกค้า</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="2">
-      <ion-label>เจ้าของสนาม</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-  <br>
-  <br>
-  <ion-button expand="block" color="secondary"(click)="login()">Login</ion-button>
-  <ion-button expand="block" fill="outline" [routerLink]="'/register'">register</ion-button>
+    <ion-segment [(ngModel)]="valuedegree" (ionChange)="segmentChanged(valuedegree)">
+      <ion-segment-button value="1">
+        <ion-label>ลูกค้า</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="2">
+        <ion-label>เจ้าของสนาม</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+    <br>
+    <br>
+    <ion-button expand="block" color="secondary"(click)="login()">Login</ion-button>
+    <ion-button expand="block" fill="outline" [routerLink]="'/register'">Register</ion-button>
 
 </ion-content>
 
