commit 9/10/63 success day

--- a/myApp/src/app/home/home.page.scss
+++ b/myApp/src/app/home/home.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+.center img {
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}
