--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -36,10 +36,10 @@
                     Account Settings </a>
               </li>
 
-              <li>
+              <li *ngIf=" data.status_member == '2'">
                 <a href="#">
                   <ion-icon name="business-outline"></ion-icon>
-                  Tasks </a>
+                  Add Store </a>
               </li>
 
               <li>
