--- a/myApp/src/app/login/login.page.html
+++ b/myApp/src/app/login/login.page.html
@@ -1,18 +1,18 @@
 
 <ion-header>
-  <ion-nav>
-    <ion-title>
-      Login
-    </ion-title>
-  </ion-nav>
+    <ion-toolbar class="center">
+<!--        <ion-title style="margin-left:  -160px" >JongSnam</ion-title>-->
+        <img src="assets/img/jongsanam-logo.png" >
+    </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
 
 <ion-list >
-    <ion-item style="text-align: center">
-      <img src="assets/img/jongsanam-logo.png">
-    </ion-item>
+<!--    <ion-item >-->
+<!--      <img style="text-align: center" src="assets/img/jongsanam-logo.png">-->
+<!--    </ion-item>-->
 
     <ion-item>
       <ion-label position="floating">username</ion-label>
