--- a/myApp/src/app/login/login.page.scss
+++ b/myApp/src/app/login/login.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+
+.center img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
