--- a/myApp/src/app/register/register.page.html
+++ b/myApp/src/app/register/register.page.html
@@ -1,20 +1,13 @@
-<script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+
 
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      <ion-img style="width: 60px; height: 60px;" src="assets/img/jongsanam-logo2.png"></ion-img>
-    </ion-title>
+      <ion-title size="large">Register</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-item>
     <ion-label position="floating">username</ion-label>
