--- a/myApp/src/app/tabs/myhome/myhome.page.html
+++ b/myApp/src/app/tabs/myhome/myhome.page.html
@@ -3,7 +3,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title style="margin-left:  -130px" >JongSnam</ion-title>
-      <ion-icon style="margin-left: 320px; width: 25px;height: 25px" (click)="Gosearch()" name="search-outline"></ion-icon>
+      <ion-button style="margin-left: 300px;" (click)="Gosearch()">
+          <ion-icon slot="icon-only" name="search"></ion-icon>
+      </ion-button>
   </ion-toolbar>
 </ion-header>
 
