--- a/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
+++ b/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
@@ -41,10 +41,10 @@
     </ion-select>
   </ion-item>
 
-  <ion-item>
-    <ion-label>Time</ion-label>
-    <ion-datetime cancelText="cancel" doneText="done" displayFormat="DD : MMMM"></ion-datetime>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label>Time</ion-label>-->
+<!--    <ion-datetime cancelText="cancel" doneText="done" displayFormat="DD : MMMM"></ion-datetime>-->
+<!--  </ion-item>-->
 
 
 
