commit 11/10/63 success day

--- a/myApp/src/app/tabs/myhome/myhome.page.html
+++ b/myApp/src/app/tabs/myhome/myhome.page.html
@@ -2,9 +2,15 @@
 
 <ion-header>
   <ion-toolbar>
+
+
     <ion-title style="margin-left:  -130px" >JongSnam</ion-title>
-      <ion-button style="margin-left: 300px;" (click)="Gosearch()">
-          <ion-icon slot="icon-only" name="search"></ion-icon>
+
+      <ion-button class="button" (click)="Gosearch()">
+          <ion-icon name="search-outline"></ion-icon>
+      </ion-button>
+      <ion-button class="button" (click)="Gosearch()">
+          <ion-icon name="notifications-outline"></ion-icon>
       </ion-button>
   </ion-toolbar>
 </ion-header>
