--- a/myApp/src/app/tabs/myhome/myhome.page.html
+++ b/myApp/src/app/tabs/myhome/myhome.page.html
@@ -9,7 +9,7 @@
       <ion-button class="button" (click)="Gosearch()">
           <ion-icon name="search-outline"></ion-icon>
       </ion-button>
-      <ion-button class="button" (click)="Gosearch()">
+      <ion-button class="button" (click)="notifications()">
           <ion-icon name="notifications-outline"></ion-icon>
       </ion-button>
   </ion-toolbar>
