--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -36,10 +36,10 @@
                     Account Settings </a>
               </li>
 
-              <li *ngIf=" data.status_member == '2'" (click)="goToAddStore()">
+              <li *ngIf=" data.status_member == '2'" (click)="goTomanageStore()">
                 <a>
                   <ion-icon name="business-outline"></ion-icon>
-                  Add Store </a>
+                  Manage Store </a>
               </li>
 
               <li>
