ทำ edit register

--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -8,10 +8,10 @@
 
 <ion-content>
   <div class="container" *ngFor="let data of dataAccount">
-    <div class="row profile">
+    <div class="r">
       <div class="col-md-3">
-        <div class="profile-sidebar">
-          <div class="profile-userpic">
+        <div class="">
+          <div class="">
             <img src="assets/img/default-avatar.png">
           </div>
           <div>
@@ -52,7 +52,6 @@
           <br>
           <div>
             <ion-button  (click)="presentAlertConfirm()" color="danger"  style="height: 40px">Logout</ion-button>
-
           </div>
 
         </div>
