--- a/myApp/src/app/partofpage/editprofile/editprofile.page.html
+++ b/myApp/src/app/partofpage/editprofile/editprofile.page.html
@@ -6,14 +6,61 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="padding">
-    <img src="assets/img/default-avatar.png">
+<ion-content >
+
+  <div class="ion-padding sizeimage centeredit" style="">
+    <img src="assets/img/default-avatar.png" class="rounded" alt="...">
   </div>
 
   <div>
-    <ion-button (click)="selectImage()">SAVE</ion-button>
+    <ion-button class="centeredit"(click)="selectImage()">เพิ่มรูปภาพใหม่</ion-button>
   </div>
-  <button type="button" class="btn btn-secondary">Secondary</button>
-</ion-content>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon1">ชื่อ-สกุล</span>
+    </div>
+    <input type="text" class="form-control" placeholder="ชื่อ" aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" class="form-control" placeholder="นามสกุล" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon2">Username</span>
+    </div>
+    <input type="text" class="form-control" placeholder="username" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon3">รหัสผ่าน</span>
+    </div>
+    <input type="password" class="form-control" [(ngModel)] ="password"placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon4">ยืนยันรหัสผ่าน</span>
+    </div>
+    <input type="password" [(ngModel)] ="confirmpassword" class="form-control" placeholder="confirmPassword" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon3">Email</span>
+    </div>
+    <input type="text" class="form-control" placeholder="email" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon5">ที่อยู่</span>
+    </div>
+    <input type="text" class="form-control" placeholder="ที่อยู่" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon6">เบอร์โทรศัพท์</span>
+    </div>
+    <input type="text" class="form-control" placeholder="เบอร์โทรศัพท์" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="centerbutton">
+    <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">ยืนยันการแก้ไข</button>
+    <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
+  </div>
 
+</ion-content>
