--- a/myApp/src/app/register/register.page.html
+++ b/myApp/src/app/register/register.page.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 <ion-header [translucent]="true">
   <ion-toolbar>
@@ -7,68 +7,123 @@
 </ion-header>
 
 
-<ion-content [fullscreen]="true">
+<!--<ion-content [fullscreen]="true">-->
 
-  <ion-item>
-    <ion-label position="floating">username</ion-label>
-    <ion-input [(ngModel)] ="username" ></ion-input>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">username</ion-label>-->
+<!--    <ion-input [(ngModel)] ="username" ></ion-input>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">password</ion-label>
-    <ion-input [(ngModel)] ="password" type="password" ></ion-input>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">password</ion-label>-->
+<!--    <ion-input [(ngModel)] ="password" type="password" ></ion-input>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">email</ion-label>
-    <ion-input [(ngModel)] ="email" type="email" ></ion-input>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">email</ion-label>-->
+<!--    <ion-input [(ngModel)] ="email" type="email" ></ion-input>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">firstname</ion-label>
-    <ion-input [(ngModel)] ="firstname" ></ion-input>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">firstname</ion-label>-->
+<!--    <ion-input [(ngModel)] ="firstname" ></ion-input>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">lastname</ion-label>
-    <ion-input [(ngModel)] ="lastname" ></ion-input>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">lastname</ion-label>-->
+<!--    <ion-input [(ngModel)] ="lastname" ></ion-input>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">Address</ion-label>
-    <ion-textarea [(ngModel)] ="address" ></ion-textarea>
-  </ion-item>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">Address</ion-label>-->
+<!--    <ion-textarea [(ngModel)] ="address" ></ion-textarea>-->
+<!--  </ion-item>-->
 
-  <ion-item>
-    <ion-label position="floating">telephone</ion-label>
-    <ion-input [(ngModel)] ="telephone" type="tel" ></ion-input>
-  </ion-item>
-
-
-  <ion-list>
-    <ion-radio-group [(ngModel)] ="status" value="status">
-      <ion-list-header>
-        <ion-label>status</ion-label>
-      </ion-list-header>
-
-      <ion-item>
-        <ion-label>ลูกค้า</ion-label>
-        <ion-radio slot="start" value="1"></ion-radio>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>เจ้าของสนาม</ion-label>
-        <ion-radio slot="start" value="2"></ion-radio>
-      </ion-item>
-
-    </ion-radio-group>
-  </ion-list>
-
-  <ion-button expand="block" color="secondary"(click)="register()" >register</ion-button>
-
-  <ion-button expand="block" fill="outline"  color="danger" [routerLink]="'/login'" >Cancel</ion-button>
+<!--  <ion-item>-->
+<!--    <ion-label position="floating">telephone</ion-label>-->
+<!--    <ion-input [(ngModel)] ="telephone" type="tel" ></ion-input>-->
+<!--  </ion-item>-->
 
 
+<!--  <ion-list>-->
+<!--    <ion-radio-group [(ngModel)] ="status" value="status">-->
+<!--      <ion-list-header>-->
+<!--        <ion-label>status</ion-label>-->
+<!--      </ion-list-header>-->
+
+<!--      <ion-item>-->
+<!--        <ion-label>ลูกค้า</ion-label>-->
+<!--        <ion-radio slot="start" value="1"></ion-radio>-->
+<!--      </ion-item>-->
+
+<!--      <ion-item>-->
+<!--        <ion-label>เจ้าของสนาม</ion-label>-->
+<!--        <ion-radio slot="start" value="2"></ion-radio>-->
+<!--      </ion-item>-->
+
+<!--    </ion-radio-group>-->
+<!--  </ion-list>-->
+
+<!--  <ion-button expand="block" color="secondary"(click)="register()" >register</ion-button>-->
+
+<!--  <ion-button expand="block" fill="outline"  color="danger" [routerLink]="'/login'" >Cancel</ion-button>-->
+
+
+
+<!--</ion-content>-->
+<ion-content>
+
+    <div class="ion-padding sizeimage centeredit" style="">
+      <img src="assets/img/jongsanam-logo.png" class="rounded" alt="...">
+    </div>
+
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">ชื่อ-สกุล</span>
+      </div>
+      <input type="text" class="form-control"[(ngModel)] ="firstname" placeholder="ชื่อ" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" [(ngModel)] ="lastname" placeholder="นามสกุล" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon2">Username</span>
+      </div>
+      <input type="text" class="form-control"[(ngModel)] ="username" placeholder="username" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon3">รหัสผ่าน</span>
+      </div>
+      <input type="password" class="form-control" [(ngModel)] ="password"placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon4">ยืนยันรหัสผ่าน</span>
+      </div>
+      <input type="password" [(ngModel)] ="confirmpassword" class="form-control" placeholder="confirmPassword" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon5">Email</span>
+      </div>
+      <input type="email" class="form-control"[(ngModel)] ="email" placeholder="email" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon6">ที่อยู่</span>
+      </div>
+      <input type="text" class="form-control" [(ngModel)] ="address" placeholder="ที่อยู่" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon7">เบอร์โทรศัพท์</span>
+      </div>
+      <input type="" class="form-control"  [(ngModel)] ="telephone" placeholder="เบอร์โทรศัพท์" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+
+    <ion-button class="centeredit" expand="block" color="secondary"(click)="register()" >register</ion-button>
+
+    <ion-button class="centeredit" expand="block" fill="outline"  color="danger" [routerLink]="'/login'" >Cancel</ion-button>
 
 </ion-content>
-
