--- a/myApp/src/app/register/register.page.scss
+++ b/myApp/src/app/register/register.page.scss
@@ -2,3 +2,14 @@
   width: 100px;
   height: 100px;
 }
+.sizeimage{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+.centeredit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
