--- a/myApp/src/app/tabs/myhome/myhome.page.html
+++ b/myApp/src/app/tabs/myhome/myhome.page.html
@@ -2,16 +2,17 @@
 
 <ion-header>
   <ion-toolbar>
+      <table style="width:120%">
+          <tr>
+              <td><h4 style="color: #0d0d0d;">JongSnam</h4></td>
 
+              <td style="font-size:30px;">
+                  <ion-icon class="iconhome"  style="margin: 0 20px;" (click)="Gosearch()" name="search-outline"></ion-icon>
+                  <ion-icon  class="iconhome" style="margin: 0 -10px; color: #0d0d0d" (click)="notifications()" name="notifications-outline"></ion-icon>
+              </td>
+          </tr>
+      </table>
 
-    <ion-title style="margin-left:  -130px" >JongSnam</ion-title>
-
-      <ion-button class="button" (click)="Gosearch()">
-          <ion-icon name="search-outline"></ion-icon>
-      </ion-button>
-      <ion-button class="button" (click)="notifications()">
-          <ion-icon name="notifications-outline"></ion-icon>
-      </ion-button>
   </ion-toolbar>
 </ion-header>
 
