--- a/myApp/src/app/partofpage/addfield/addfield.page.html
+++ b/myApp/src/app/partofpage/addfield/addfield.page.html
@@ -6,4 +6,34 @@
 
 <ion-content>
 
+  <div class="ion-padding sizeimage centeredit" style="">
+    <img src="assets/img/default-avatar.png" class="rounded" alt="...">
+  </div>
+
+  <div>
+    <ion-button class="centeredit"(click)="selectImage()">เพิ่มรูปภาพใหม่</ion-button>
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon1">ชื่อสนาม</span>
+    </div>
+    <input type="text" class="form-control" placeholder="ชื่อสนาม" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon6">เบอร์โทรศัพท์</span>
+    </div>
+    <input type="text" class="form-control" placeholder="เบอร์โทรศัพท์" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon5">ราคา</span>
+    </div>
+    <input type="text" class="form-control" placeholder="ราคา" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="centerbutton">
+    <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">เพิ่มสนาม</button>
+    <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
+  </div>
 </ion-content>
