--- a/myApp/src/app/partofpage/addfield/addfield.page.html
+++ b/myApp/src/app/partofpage/addfield/addfield.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
     <ion-title>addfield</ion-title>
   </ion-toolbar>
 </ion-header>
