--- a/myApp/src/app/partofpage/addstore/addstore.page.html
+++ b/myApp/src/app/partofpage/addstore/addstore.page.html
@@ -1,6 +1,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
     <ion-title>addstore</ion-title>
   </ion-toolbar>
 </ion-header>
