--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -1,14 +1,11 @@
 
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-        <ion-toolbar>
-            <ion-buttons slot="start">
-                <ion-back-button >back</ion-back-button>
-            </ion-buttons>
-        </ion-toolbar>
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons>
+            <ion-back-button defaultHref="home"></ion-back-button>
+        </ion-buttons>
+        <ion-title>field</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
