--- a/myApp/src/app/partofpage/addstore/addstore.page.html
+++ b/myApp/src/app/partofpage/addstore/addstore.page.html
@@ -58,6 +58,11 @@
     </div>
     <input type="text" class="form-control" placeholder="ที่อยู่" aria-label="Username" aria-describedby="basic-addon1">
   </div>
+  <ion-item>
+    <ion-label floating>Home Address</ion-label>
+    <ion-input id="txtHome" type="text"></ion-input>
+  </ion-item>
+
   <div class="centerbutton">
     <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">เพิ่มสนาม</button>
     <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
