ทำ แอดสนามได้ และ แก้ไขข้อมูล 02/11

--- a/myApp/src/app/partofpage/addfield/addfield.page.html
+++ b/myApp/src/app/partofpage/addfield/addfield.page.html
@@ -18,7 +18,7 @@
       <div class="d-flex justify-content-center avatar">
         <div class="btn btn-mdb-color btn-rounded float-left avatar">
           <span>Add photo</span>
-          <input type="file" class="avatar-pic" [(ngModel)]="file_image">
+          <input type="file" class="avatar-pic">
         </div>
       </div>
     </div>
